--- a/css/main.scss
+++ b/css/main.scss
@@ -46,5 +46,22 @@ nav{
   display: none;
 }
  
+section.hero {
+  color: white;
+  height: 90vh;
+
+  svg {
+    stroke: white;
+    fill: white;
+    position: absolute;
+    width: 2em;
+    bottom: 2em;
+   
+
+  }
+     
+    
+  
+}
 
 
