--- a/css/main.scss
+++ b/css/main.scss
@@ -51,31 +51,46 @@ height: 100vh;
 text-transform: uppercase;
 width: 35%;
 z-index: 999;
+transform: translateX(100%);
 
-ul{
+  ul{
   list-style-type: none;
   padding: 0;
   margin-top: 5em;
 
 
-  a {
+    a {
     color: black;
     padding: .8em  2em;
     display: block;
     font-size: .7rem;
     line-height: 2em;
     
-    &:hover { 
+      &:hover { 
       background-color: rgb(238, 230, 230);
+      }
     }
   }
-}
+
+  .close {
+   stroke: black;
+   margin-top: -4.5em;
+   float: right;
+   
+   path{
+     fill: rgb(173, 169, 169);
+   }
+  }
 
 }
  
 section.hero {
   color: white;
   height: 90vh;
+
+  .subhead{
+    font-size: .7em;
+   }
 
   svg {
     stroke: white;
@@ -89,10 +104,27 @@ section.hero {
     font-size: 1.5em;
     margin-top: 2em;
     line-height: 1.8rem;
-  }
-     
     
-  
+  }
+       
 }
+.more-info{ 
+ 
+  img{
+    width: 100%;
+    object-fit: cover;
+    height: 11em;
+  }
+  .title{
+    font-weight: bold;
+    font-size: 1.25em;
+
+  }
+  .desc{
+    line-height: 1.3rem;
+  }
+}
+
+
 
 
