--- a/css/main.css
+++ b/css/main.css
@@ -105,4 +105,39 @@ section.hero h1 {
 }
 .more-info .desc {
   line-height: 1.3rem;
+}
+
+@media only screen and (min-width: 680px) {
+  body {
+    margin: 1.5em 5em;
+    font-family: sans-serif;
+  }
+}
+@media only screen and (min-width: 920px) {
+  .menu {
+    display: none;
+  }
+  nav {
+    transform: translateX(0%);
+    position: unset;
+    display: block;
+    width: auto;
+    height: auto;
+    background: none;
+  }
+  nav svg.close {
+    display: none;
+  }
+  nav ul {
+    display: flex;
+    margin: 0%;
+  }
+  nav ul a {
+    color: white;
+    padding: 0.5em 1.5em;
+  }
+  nav ul a:hover {
+    background: none;
+    text-decoration: underline;
+  }
 }/*# sourceMappingURL=main.css.map */
