--- a/css/main.scss
+++ b/css/main.scss
@@ -174,7 +174,7 @@ section.hero {
     left: unset;
     right:0;
     width: 50%;
-    height: 30em;
+    height: 28.5em;
 
   }
 
@@ -204,6 +204,38 @@ section.hero {
       fill: black;
  
     }
+  }
+  .features {
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    gap: 3em;
+    margin-bottom: 8em;
+   
+    
+
+    img{
+      width:25em;
+      
+    }
+    .content{
+      text-align: right;
+      width: 25em;
+    }
+  }
+  .features.left {
+    grid-template-areas: 
+    "left right";
+
+    img{
+      grid-area: left;
+    }
+
+    .content{
+      text-align: right;
+      width: 25em;
+      justify-self: left;
+    }
+
   }
 
 }
