--- a/css/main.scss
+++ b/css/main.scss
@@ -92,6 +92,8 @@ transform: translateX(100%);
 section.hero {
   color: white;
   height: 90vh;
+  animation: moveDown 1s ease-in-out forwards;
+  opacity: 0;
 
   .subhead{
     font-size: .7em;
@@ -274,7 +276,16 @@ section.hero {
      transform: translateY(0px);
   }
 }
+@keyframes moveDown {
+  from{
+    transform: translateY(-100%);
+  }
 
+  to{
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
 
 
 
