--- a/css/main.css
+++ b/css/main.css
@@ -116,6 +116,10 @@ section.hero h1 {
   line-height: 1.3rem;
 }
 
+.open-nav {
+  transform: translateX(0%);
+}
+
 @media only screen and (min-width: 680px) {
   body {
     margin: 1.5em 5em;
