--- a/css/main.scss
+++ b/css/main.scss
@@ -132,6 +132,11 @@ section.hero {
     line-height: 1.3rem;
   }
 }
+.open-nav{
+  transform: translateX(0%);
+
+}
+
 
 @media only screen and(min-width:680px) {
   body{
