--- a/css/main.css
+++ b/css/main.css
@@ -88,12 +88,12 @@ section.hero {
 section.hero .subhead {
   font-size: 0.7em;
 }
-section.hero svg {
+section.hero .down-arrow {
   stroke: white;
-  fill: white;
+  fill: black;
   position: absolute;
   width: 2em;
-  bottom: 0.5em;
+  bottom: 4.5em;
   animation: moveArrow 1s alternate-reverse infinite;
 }
 section.hero h1 {
@@ -129,6 +129,9 @@ section.hero h1 {
 @media only screen and (min-width: 920px) {
   .menu {
     display: none;
+  }
+  section.hero .down-arrow {
+    bottom: -7em;
   }
   nav {
     transform: translateX(0%);
